--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@astrolib/seo": "^1.0.0-beta.8",
     "@fontsource-variable/inter": "^5.2.6",
     "@fontsource/comforter": "^5.2.8",
+    "@mux/mux-player-astro": "^3.10.2",
     "astro": "^5.12.9",
     "astro-embed": "^0.9.0",
     "astro-icon": "^1.1.5",
