--- a/src/config.yaml
+++ b/src/config.yaml
@@ -73,4 +73,4 @@ ui:
 
 turnstile:
   enabled: true
-  siteKey: '0x4AAAAAAAxxxxxxxxxxxxxxxxx' # Replace with your Cloudflare Turnstile site key
+  siteKey: '0x4AAAAAACKOMomcie5cCyHQ'
