--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node": "^18.17.1 || ^20.3.0 || >= 21.0.0"
   },
   "scripts": {
+    "dev": "astro dev",
+    "dev:mobile": "astro dev --host",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
